<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InClass</string>
    <string name="action_settings">Settings</string>
    <string name="buttonGray">Gray</string>
    <string name="cyan">Cyan</string>
    <string name="buttonDkGray">DkGray</string>
    <string name="magenta">Magenta</string>
    <string name="yellow">Yellow</string>
    <string name="numberOfClicks"># Clicks: 0</string>

</resources>
